fix: build.gradle and deprecated api